--- a/BridgeAndBlade.uproject
+++ b/BridgeAndBlade.uproject
@@ -11,7 +11,8 @@
 			"AdditionalDependencies": [
 				"Engine",
 				"Paper2D",
-				"CoreUObject"
+				"CoreUObject",
+        "AIModule"
 			]
 		}
 	],
@@ -22,6 +23,10 @@
 			"TargetAllowList": [
 				"Editor"
 			]
+		},
+		{
+			"Name": "DaySequence",
+			"Enabled": true
 		}
 	]
 }
