added player controller

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/GameWorld.GameWorld
 EditorStartupMap=/Game/GameWorld.GameWorld
+GlobalDefaultGameMode=/Game/Gamemode/BP_GAMEMODE.BP_GAMEMODE_C
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
